[workspace]

members = [
    "client",
    "manager", 
    "comm",
    "store"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "1.3.0" }
# I know of the "full" feature, I'd prefer to link against as few crates as possible.
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
