[workspace]

members = [
    "client",
    "manager", 
    "comm",
    "store"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
fnv = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde", "write", "const_generics"] }
rmp-serde = "1.3.0"
# I know of the "full" feature, I'd prefer to link against as few crates as possible.
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
